src/objects/Risk_Issues_Management2__c.object
<CustomObject>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <label>Action Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Detail__c</fullName>
        <label>Action Plan Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Priority__c</fullName>
        <label>Action Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Title__c</fullName>
        <label>Action Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Covered__c</fullName>
        <label>Entity Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Life HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <displayFormat>A.{00}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Issue_Title__c</fullName>
        <label>Issue Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <label>Report Title</label>
        <picklist>
            <picklistValues>
                <fullName>IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development &amp; Pricing Audit (GI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT (Project Governance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Penetration Testing Assessment Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Risk Issues Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Action_Priority__c</columns>
        <columns>Entity_Covered__c</columns>
        <columns>Risk_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MM}/{DD}/{YYYY}-{00}</displayFormat>
        <label>Risk Issue Date</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Issues Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>